# apkg

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  mkdocs.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tox.ini
apkg/: __init__.py  adistro.py  cache.py  cli.py  compat.py  ex.py  log.py  pkgstyle.py  pkgtemplate.py  project.py
apkg/commands/: build.py  build_dep.py  compat.py  get_archive.py  info.py  install.py  lint.py  make_archive.py  srcpkg.py  status.py  test.py  test_dep.py
apkg/pkgstyles/: arch.py  deb.py  nix.py  rpm.py
apkg/templatevars/: deb_series.py  distro_like.py
apkg/util/: archive.py  common.py  run.py  upstreamversion.py
ci/: build_containers.yml
ci/images/: README.md  update_all.sh
ci/lxc/: README.md  build.sh  push.sh  update.sh
ci/tests/: test_apkg.py  test_bird.py  test_knot_dns.py  test_knot_resolver.py  test_libyang.py
distro/config/: apkg.toml
distro/tests/: control  test-import-apkg.py  test-root.sh
docs/: __init__.py  cache.md  commands.md  compat.md  config.md  distro.md  errors.md  guide.md  index.md  install.md  intro.md  news.md  pkgstyles.md  platforms.md  quickstart.md  templates.md  templatevars.md  test.md  users.md
examples/minimal-no-git/: README.md  apkg-ex-minimal-no-git
examples/multiple-sources/: README.md
examples/pkgtests-all-template/: README.md
examples/pkgtests-basic/: README.md
examples/pkgtests-extra/: README.md
examples/template-variables/: README.md  apkg-ex-template-variables
examples/templates/: README.md
scripts/: make-archive.sh  upstream-version.py
(+198 files in other folders)
