[tool.poetry]
name = "apkg"
version = "0.0.0"
description = "cross-distro upstream packaging automation tool"
authors = ["Jakub Ružička <jakub.ruzicka@nic.cz>"]
readme = "README.md"
homepage = "https://gitlab.nic.cz/packaging/apkg"
repository = "https://gitlab.nic.cz/packaging/apkg"
documentation = "https://apkg.readthedocs.io/"
keywords = ["packaging", "devops", "CI", "cli"]
packages = [
    { include = "apkg" },
]
exclude = ["docs"]

[tool.poetry.urls]
Issues = "https://gitlab.nic.cz/packaging/apkg/-/issues"

[tool.poetry.scripts]
apkg = 'apkg.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.11.2"
blessings = "^1.7"
click = "^8.1.3"
distro = "^1.8.0"
jinja2 = "^3.1.2"
packaging = "^23.0"
requests = "^2.28.2"
toml = "^0.10.2"

[tool.poetry-dynamic-versioning]
enable = true
bump = true

[tool.poetry-dynamic-versioning.substitution]
files = ["apkg/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
